--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,71 @@
+# Compiled class files
 *.class
-*.log
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Log files
+*.log
+logs/
+spring.log
+
+# Scala cache files
+*.cache
+
+# SBT directories
+target/
+project/target/
+project/boot/
+history/
+
+# Generated source
+src_managed/
+lib_managed/
+dist/
+build/
+out/
+gen/
+
+# IDE specific files
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+
+# Eclipse
+*.classpath
+*.project
+.settings/
+.metadata/
+tmp/
+
+# Visual Studio Code
+.vscode/
+
+# Operating System files
+.DS_Store
+Thumbs.db
+
+# Package Files
+*.jar
+*.war
+*.ear
+
+# Temporary files
+tmp/
+*.tmp
+*~
+*.bak
+
+# Swap files
+*.swp
+*.swo
+
+# Node modules (if applicable)
+node_modules/
+
+# Coverage reports
+coverage/
+*.coverage
+
+# Other
+*.log.*
+logs/
+*.history
