--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,23 +1,34 @@
 # Application Configuration
-
 app:
   name: "TalkToDB"
   version: "0.1.0-SNAPSHOT"
 
-# Server Configuration
+# AWS Configuration
+aws:
+  region: ap-southeast-2
+  ses:
+    senderEmail: admin@resume.simon.xie.net
+    replyToEmail: simon.fuxi.xie@gmail.com
 
+# Integration Configuration
+integration:
+  dataApiUrl: xxx #to be updated
+
+# Server Configuration
 server:
   port: 8080
 
 # Logging Configuration
-
 logging:
   level:
     root: INFO
 
 # Database Configuration
-
 spring:
+  main:
+    web-application-type: reactive
+  application:
+    name: talktodb-api
   datasource:
     url: "jdbc:mysql://localhost:3306/talktodb"
     username: "root"
