--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,7 +27,7 @@ logging:
 # Database Configuration
 spring:
   profiles:
-    active: production
+    active: production   # set profile as production
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
   main:
